--- a/frontEnd/style/theme.css
+++ b/frontEnd/style/theme.css
@@ -6,6 +6,10 @@
 
 /* theme style */
 
+* {
+  box-sizing: border-box;
+}
+
 html, body {
   font: 1em/1.3 "Noto Sans TC", sans-serif;
 }
@@ -20,10 +24,12 @@ h2 {
 
 .container {
   position: relative;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
   width: 100%;
   height: 100%;
+}
+
+.page-container {
+  position: relative;
+  min-width: 100%;
+  min-height: 100%;
 }
