--- a/frontEnd/style/theme.css
+++ b/frontEnd/style/theme.css
@@ -2,7 +2,7 @@
 @import "reset.css";
 
 /* Google web fonts */
-@import "https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Noto+Sans+TC:wght@400;700&display=swap";
+@import "https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Noto+Sans+TC:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap";
 
 /* theme style */
 
@@ -11,7 +11,7 @@
 }
 
 html, body {
-  font: 1em/1.3 "Noto Sans TC", sans-serif;
+  font: 1em/1.3 "Roboto", "Noto Sans TC", "Microsoft JhengHei", sans-serif;
 }
 
 h1 {
@@ -20,6 +20,10 @@ h1 {
 
 h2 {
   font-size: 1.5em;
+}
+
+.title-font {
+  font-family: "Caveat", cursive, sans-serif;
 }
 
 .container {
